--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -127,7 +127,7 @@ pipeline {
                                 --env AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
                                 --env AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
                                 --env AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN \
-                                ${awsCFBaseCommand} create-stack --region $AWSRegion --stack-name $CFStackName --template-body \`xargs\` ",
+                                ${awsCFBaseCommand} create-stack --region $AWSRegion --stack-name $CFStackName --template-body `xargs` ",
                             returnStdout: true
                         ).trim()
 
