--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -124,7 +124,7 @@ pipeline {
                     script {
                         echo "Upload CF template to S3"
                         def uploadResult = sh(
-                            script: "cat $WORKSPACE/utils/infrastructure.yaml | /usr/bin/docker run \
+                            script: "/usr/bin/docker run \
                                 --env AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
                                 --env AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
                                 --env AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN \
@@ -135,7 +135,7 @@ pipeline {
 
                         echo "Create CloudFormation stack"
                         def creationResult = sh(
-                            script: "cat $WORKSPACE/utils/infrastructure.yaml | /usr/bin/docker run \
+                            script: "/usr/bin/docker run \
                                 --env AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
                                 --env AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
                                 --env AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN \
