--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -4,3 +4,7 @@ USER root
 
 RUN apt-get update && \
     apt-get install -y jq
+
+RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
+    unzip awscliv2.zip && \
+    ./aws/install
