--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -2,9 +2,16 @@ FROM jenkins/jenkins:lts-jdk11
 
 USER root
 
+# Install jq
 RUN apt-get update && \
     apt-get install -y jq
 
+# Install awscli
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && \
     ./aws/install
+
+# Install kubectl
+RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
+    install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl && \
+    kubectl version --client
